--- a/docs/Lectures/Theme_1-Python_Programming/Lecture_2-Data_Types_in_Python/Lecture_2-Data_Types.ipynb
+++ b/docs/Lectures/Theme_1-Python_Programming/Lecture_2-Data_Types_in_Python/Lecture_2-Data_Types.ipynb
@@ -155,7 +155,7 @@
     "\n",
     "**Cons of Dynamic Typing**\n",
     "\n",
-    "* May result in unexpected bugs due to type related errors\n",
+    "* May result in unexpected bugs due to type-related errors\n",
     "* Requires to be aware of the type of objects\n",
     "* Statically typed languages are more efficient because the compiler can optimize the code based on knowledge of the type of variables"
    ]
@@ -361,7 +361,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# In Python we create tuples with parantheses \n",
+    "# In Python we create tuples with parentheses \n",
     "a = (1,2)"
    ]
   },
@@ -411,7 +411,7 @@
     "\n",
     "**Integers** are whole numbers, and can be positive or negative. For example: 2 and -2.\n",
     "\n",
-    "**Floating point** numbers in Python have a decimal point, or use an exponential (E) to define the number. For example 2.0 and -2.163 are examples of floating point numbers. `4E2` (4 times 10 to the power of 2 = 400) and `1E-3` (3 times 10 to the power of -3 = 0.001) are also examples of floating point numbers in Python.\n",
+    "**Floating point** numbers in Python have a decimal point, or use an exponential (E) to define the number. For example, 2.0 and -2.163 are examples of floating point numbers. `4E2` (4 times 10 to the power of 2 = 400) and `1E-3` (3 times 10 to the power of -3 = 0.001) are also examples of floating point numbers in Python.\n",
     "\n",
     "Other types of number objects that are less frequently used include:\n",
     "\n",
@@ -3260,7 +3260,7 @@
     "\n",
     "> A **tuple** is a collection of objects which is ordered and immutable, and it is commonly written as a series of items in parentheses.\n",
     "\n",
-    "In Python, tuples are very similar to lists, with the main difference being that tuples are *immutable* sequences, unlike lists that are *mutable* sequences. Tuples are created similarly to lists, but with parantheses `()` instead of squared brackets `[]`.\n",
+    "In Python, tuples are very similar to lists, with the main difference being that tuples are *immutable* sequences, unlike lists that are *mutable* sequences. Tuples are created similarly to lists, but with parentheses `()` instead of squared brackets `[]`.\n",
     "\n",
     "The basic characteristics of tuples include:\n",
     "\n",
@@ -5181,7 +5181,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As another example, `\\t` inserts a tab into a string. Note that `%r` output the string representation and ignored the the slash `\\` in `\\t`, therefore a tab was not inserted."
+    "As another example, `\\t` inserts a tab into a string. Note that `%r` output the string representation and ignored the slash `\\` in `\\t`, therefore a tab was not inserted."
    ]
   },
   {
