--- a/docs/Lectures/Theme_1-Python_Programming/Lecture_2-Data_Types_in_Python/Lecture_2-Data_Types.ipynb
+++ b/docs/Lectures/Theme_1-Python_Programming/Lecture_2-Data_Types_in_Python/Lecture_2-Data_Types.ipynb
@@ -1984,6 +1984,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We can think of lists as arrays of references (pointers) to objects with allocated memory. Each element in the list is a reference to an object (such as numbers, strings, lists, etc.), and not the object itself."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Just like with strings, the built-in function `len()` returns the number of items in the sequence of the list."
    ]
   },
@@ -2766,13 +2773,6 @@
    "source": [
     "# Grab the first item of the first item in the matrix object\n",
     "matrix[0][0]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can think of lists as arrays of references (pointers) to a series of objects with allocated memory. Each element in the list is a reference to an object, and not the object itself. Therefore, a nested list can store references to other objects, such as lists, numbers, strings, etc., which allows nesting."
    ]
   },
   {
