--- a/docs/Lectures/Theme_1-Python_Programming/Lecture_3-Statements,_Files/Lecture_3-Statements,_Files.ipynb
+++ b/docs/Lectures/Theme_1-Python_Programming/Lecture_3-Statements,_Files/Lecture_3-Statements,_Files.ipynb
@@ -65,7 +65,7 @@
     "\n",
     "> **Statements** are sections of code that perform an action. The main groups of Python statements are: assignment statements, print statements, conditional statements (`if`, `break`, `continue`, `try`), and looping statements (`for`, `while`). \n",
     "\n",
-    "Therefore, `a = 2 + 5` is a statement, because it doesn't return a value, but it performs an action by assigning the value `5` to the variable `a`. Beside assignment statements (such as `a = 2 + 5`), other forms of statements include conditional statements (e.g., `if x > 5:`), looping statements (e.g., `for i in range(10):`), print statements (e.g., `print('hi')`), as well as there are several other statements, such as `import`, `return`, `pass`, etc. Note again that none of these statements returns a value in the way expressions do. \n",
+    "Therefore, `a = 2 + 5` is a statement, because it doesn't return a value, but it performs an action by assigning the value of `2 + 5` to the variable `a`. Beside assignment statements (such as `a = 2 + 5`), other forms of statements include conditional statements (e.g., `if x > 5:`), looping statements (e.g., `for i in range(10):`), print statements (e.g., `print('hi')`), as well as there are several other statements, such as `import`, `return`, `pass`, etc. Note again that none of these statements returns a value in the way expressions do. \n",
     "\n",
     "> **Modules** are Python files that contain Python statements, and are also called scripts.\n",
     "\n",
@@ -108,7 +108,7 @@
     "\n",
     "The `if` statement is used to perform a test and control whether or not the indented block of code is executed.\n",
     "\n",
-    "- The first line is a header line. It opens with the `if` test and ends with a colon `:` (omitting the colon at the end of `if` statement is one of the most common mistakes by beginner programmers in Python). The output of the expression in the `if` test is a *Boolean* variable (i.e., *True* or *False*).   \n",
+    "- The first line is a header line. It opens with the `if` keyword, followed by a test condition, and ends with a colon `:` (omitting the colon at the end of `if` statement is one of the most common mistakes by beginner programmers in Python). The output of the expression in the `if` test is a *Boolean* variable (i.e., *True* or *False*).   \n",
     "- The block of code is indented under the header and contains one or more statements (such as the `print` statements in the next cell) that are executed if the test is *True*."
    ]
   },
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {
     "tags": []
    },
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {
     "tags": []
    },
@@ -902,32 +902,6 @@
     "if {num > 20 and num > 50 and \n",
     "  num < 200 and num < 100}:\n",
     "    print('Medium number')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Good', 'Bad', 'Ugly']"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "L = [\"Good\",\n",
-    "\"Bad\",\n",
-    "\"Ugly\"]\n",
-    "\n",
-    "L"
    ]
   },
   {
@@ -1078,7 +1052,7 @@
     "The general format of a `for` loop in Python is:\n",
     "\n",
     "    for item in object:\n",
-    "        code to execute -> perform actions    "
+    "        code to execute "
    ]
   },
   {
@@ -1743,7 +1717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1773,7 +1747,7 @@
     "        code to execute -> perform action 1\n",
     "        if test: \n",
     "            break         # Exit the 'while' loop now\n",
-    "            continue      # Skip the 'else' statements (if present) and go to top of the 'while' loop now \n",
+    "            continue      # Skip the Skip the statements after it, and go to top of the 'while' loop  \n",
     "        else:\n",
     "            code to execute -> perform action 2   # Run these statements when the 'if' test is False \n",
     "\n",
@@ -1782,7 +1756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 55,
    "metadata": {
     "tags": []
    },
@@ -1809,7 +1783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 56,
    "metadata": {
     "tags": []
    },
@@ -1845,7 +1819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 57,
    "metadata": {
     "tags": []
    },
@@ -1885,7 +1859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 58,
    "metadata": {
     "tags": []
    },
@@ -1939,7 +1913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 59,
    "metadata": {
     "tags": []
    },
@@ -1953,7 +1927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 60,
    "metadata": {
     "tags": []
    },
@@ -1999,7 +1973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 61,
    "metadata": {
     "tags": []
    },
@@ -2013,31 +1987,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `write(string)` method of the file object named `myfile` allows to write a string to the file. In the next example, the string `'hello text file\\n'` is written. Note also that we need to include the end-of-line terminator `\\n` in the string, otherwise the next `write` command will continue the current line."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "16"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Write a line of text: string\n",
-    "myfile.write('hello text file\\n')\n",
-    "# Note that the write call returns the number of characters in the string"
+    "The `.write(string)` method of the file object named `myfile` allows to write a string to the file. In the next example, the string `'hello text file\\n'` is written. Note also that we need to include the end-of-line terminator `\\n` in the string, otherwise the next `write` command will continue the current line."
    ]
   },
   {
@@ -2050,10 +2000,34 @@
     {
      "data": {
       "text/plain": [
-       "18"
+       "16"
       ]
      },
      "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Write a line of text: string\n",
+    "myfile.write('hello text file\\n')\n",
+    "# Note that the write call returns the number of characters in the string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18"
+      ]
+     },
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2064,7 +2038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 64,
    "metadata": {
     "tags": []
    },
@@ -2089,7 +2063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 65,
    "metadata": {
     "tags": []
    },
@@ -2119,7 +2093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 66,
    "metadata": {
     "tags": []
    },
@@ -2127,29 +2101,6 @@
    "source": [
     "# Open for text input: 'r' is default mode and it can be omitted\n",
     "myfile = open('test.txt','r')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'This is a first line\\n'"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Read the lines one at a time\n",
-    "myfile.readline()"
    ]
   },
   {
@@ -2162,7 +2113,7 @@
     {
      "data": {
       "text/plain": [
-       "'This is a second line\\n'"
+       "'This is a first line\\n'"
       ]
      },
      "execution_count": 67,
@@ -2185,10 +2136,33 @@
     {
      "data": {
       "text/plain": [
-       "''"
+       "'This is a second line\\n'"
       ]
      },
      "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Read the lines one at a time\n",
+    "myfile.readline()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2207,7 +2181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 70,
    "metadata": {
     "tags": []
    },
@@ -2218,7 +2192,7 @@
        "'This is a first line\\nThis is a second line\\n'"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2237,7 +2211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 71,
    "metadata": {
     "tags": []
    },
@@ -2266,7 +2240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 72,
    "metadata": {
     "tags": []
    },
@@ -2294,7 +2268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 73,
    "metadata": {
     "tags": []
    },
@@ -2305,7 +2279,7 @@
        "'This is a first line\\nThis is a second line\\n'"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2317,7 +2291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 74,
    "metadata": {
     "tags": []
    },
@@ -2328,7 +2302,7 @@
        "''"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2349,7 +2323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 75,
    "metadata": {
     "tags": []
    },
@@ -2360,7 +2334,7 @@
        "0"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2372,7 +2346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 76,
    "metadata": {
     "tags": []
    },
@@ -2383,7 +2357,7 @@
        "'This is a first line\\nThis is a second line\\n'"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2402,7 +2376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 77,
    "metadata": {
     "tags": []
    },
@@ -2420,7 +2394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 78,
    "metadata": {
     "tags": []
    },
@@ -2457,7 +2431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 79,
    "metadata": {
     "tags": []
    },
@@ -2484,7 +2458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 80,
    "metadata": {
     "tags": []
    },
@@ -2530,7 +2504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 81,
    "metadata": {
     "tags": []
    },
@@ -2541,7 +2515,7 @@
        "22"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2554,7 +2528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 82,
    "metadata": {
     "tags": []
    },
@@ -2579,7 +2553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 83,
    "metadata": {
     "tags": []
    },
@@ -2599,7 +2573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 84,
    "metadata": {
     "tags": []
    },
@@ -2646,7 +2620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 85,
    "metadata": {
     "tags": []
    },
@@ -2659,7 +2633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 86,
    "metadata": {
     "tags": []
    },
@@ -2670,7 +2644,7 @@
        "bytes"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2702,7 +2676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 87,
    "metadata": {
     "tags": []
    },
@@ -2736,7 +2710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 88,
    "metadata": {
     "tags": []
    },
@@ -2747,7 +2721,7 @@
        "\"Spam\\n43,44,45\\n[1, 2, 3]\\n{'a': 1, 'b': 2}\\n\""
       ]
      },
-     "execution_count": 87,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2760,7 +2734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 89,
    "metadata": {
     "tags": []
    },
@@ -2793,7 +2767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 90,
    "metadata": {
     "tags": []
    },
@@ -2804,7 +2778,7 @@
        "'Spam\\n'"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2819,7 +2793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 91,
    "metadata": {
     "tags": []
    },
@@ -2830,7 +2804,7 @@
        "'Spam'"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2850,7 +2824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 92,
    "metadata": {
     "tags": []
    },
@@ -2861,7 +2835,7 @@
        "'43,44,45\\n'"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2874,7 +2848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 93,
    "metadata": {
     "tags": []
    },
@@ -2885,7 +2859,7 @@
        "['43', '44', '45\\n']"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2898,7 +2872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 94,
    "metadata": {
     "tags": []
    },
@@ -2909,7 +2883,7 @@
        "[43, 44, 45]"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2922,7 +2896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 95,
    "metadata": {
     "tags": []
    },
@@ -2933,7 +2907,7 @@
        "(43, 44, 45)"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2952,7 +2926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 96,
    "metadata": {
     "tags": []
    },
@@ -2963,7 +2937,7 @@
        "'[1, 2, 3]\\n'"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2971,28 +2945,6 @@
    "source": [
     "line = F.readline()\n",
     "line"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'[1, 2, 3]'"
-      ]
-     },
-     "execution_count": 96,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "line.rstrip()"
    ]
   },
   {
@@ -3005,7 +2957,7 @@
     {
      "data": {
       "text/plain": [
-       "[1, 2, 3]"
+       "'[1, 2, 3]'"
       ]
      },
      "execution_count": 97,
@@ -3014,8 +2966,7 @@
     }
    ],
    "source": [
-    "l = eval(line)\n",
-    "l"
+    "line.rstrip()"
    ]
   },
   {
@@ -3028,7 +2979,7 @@
     {
      "data": {
       "text/plain": [
-       "list"
+       "[1, 2, 3]"
       ]
      },
      "execution_count": 98,
@@ -3037,7 +2988,8 @@
     }
    ],
    "source": [
-    "type(l)"
+    "l = eval(line)\n",
+    "l"
    ]
   },
   {
@@ -3050,7 +3002,7 @@
     {
      "data": {
       "text/plain": [
-       "\"{'a': 1, 'b': 2}\\n\""
+       "list"
       ]
      },
      "execution_count": 99,
@@ -3059,8 +3011,7 @@
     }
    ],
    "source": [
-    "line = F.readline()\n",
-    "line"
+    "type(l)"
    ]
   },
   {
@@ -3073,7 +3024,7 @@
     {
      "data": {
       "text/plain": [
-       "{'a': 1, 'b': 2}"
+       "\"{'a': 1, 'b': 2}\\n\""
       ]
      },
      "execution_count": 100,
@@ -3082,8 +3033,8 @@
     }
    ],
    "source": [
-    "d = eval(line)\n",
-    "d"
+    "line = F.readline()\n",
+    "line"
    ]
   },
   {
@@ -3096,10 +3047,33 @@
     {
      "data": {
       "text/plain": [
-       "dict"
+       "{'a': 1, 'b': 2}"
       ]
      },
      "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = eval(line)\n",
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict"
+      ]
+     },
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3131,7 +3105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 103,
    "metadata": {
     "tags": []
    },
@@ -3153,7 +3127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 104,
    "metadata": {
     "tags": []
    },
@@ -3164,7 +3138,7 @@
        "[1, 2, 3]"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3178,7 +3152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 105,
    "metadata": {
     "tags": []
    },
@@ -3212,7 +3186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 106,
    "metadata": {
     "tags": []
    },
@@ -3227,7 +3201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 107,
    "metadata": {
     "tags": []
    },
@@ -3238,7 +3212,7 @@
        "{'a': 1, 'b': 2}"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3426,7 +3400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
