--- a/docs/Lectures/Theme_1-Python_Programming/Lecture_3-Statements,_Files/Lecture_3-Statements,_Files.ipynb
+++ b/docs/Lectures/Theme_1-Python_Programming/Lecture_3-Statements,_Files/Lecture_3-Statements,_Files.ipynb
@@ -820,7 +820,7 @@
    "source": [
     "Python expects `if` statements to be written on a single line.\n",
     "\n",
-    "The code below produces an error because the `if` statement spans on two lines."
+    "The code below produces an error because the `if` statement spans two lines."
    ]
   },
   {
@@ -1320,7 +1320,7 @@
    "source": [
     "Notice how the above produces only the keys. \n",
     "\n",
-    "We can also use the dictionary methods **.keys()**, **.values()**, and **.items()** with `for` loops. In Python each of these methods returns a *dictionary view object*. The view objects provide a view of the dictionary's key, values, and items (pairs of keys and values). The dictionary view objects support operations like membership tests and iterations over the keys, values, and items. The type of the the view objects is `dict_items`. If we make changes to the dictionary, the view objects will keep track of the changes. "
+    "We can also use the dictionary built-in methods **.keys()**, **.values()**, and **.items()** with `for` loops. In Python each of these methods returns a *dictionary view object*. The view objects provide a view of the dictionary's key, values, and items (pairs of keys and values). The dictionary view objects support operations like membership tests and iterations over the keys, values, and items. The type of the view objects is `dict_items`. If we make changes to the dictionary, the view objects will keep track of the changes. "
    ]
   },
   {
@@ -2389,7 +2389,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can also sometimes see another code variant, where `open` is used within a `with` statement, like in the example shown below. An advantage of this approach is that the `with` statement automatically closes the file after the block, as well as it makes handling any unexpected errors easier. Thus, it is the preferred way for opening files by many Python users."
+    "You can also sometimes see another code variant, where `open` is used within a `with` statement, like in the example shown below. An advantage of this approach is that the `with` statement automatically closes the file after the block, as well as it makes handling any unexpected errors easier. Thus, it is the preferred way for opening files by many Python users. The `with` statement in Python is also referred to as a context statement, or context manager, as it allow to manage resources efficiently and cleanly. "
    ]
   },
   {
@@ -3165,7 +3165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `pickle` module performs conversion of Python objects to string representation, referred to as **object serialization**, and reverse conversion of strings to Python objects, which is called  **object deserialization**."
+    "The `pickle` module performs a conversion of Python objects to string representation, referred to as **object serialization**, and a reverse conversion of strings to Python objects, which is called  **object deserialization**."
    ]
   },
   {
