--- a/docs/Lectures/Theme_1-Python_Programming/Lecture_2-Data_Types_in_Python/Lecture_2-Data_Types.ipynb
+++ b/docs/Lectures/Theme_1-Python_Programming/Lecture_2-Data_Types_in_Python/Lecture_2-Data_Types.ipynb
@@ -966,7 +966,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.1086506476291701\n"
+      "0.25644812767258474\n"
      ]
     }
    ],
@@ -2615,7 +2615,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<zip object at 0x0000014F085190C0>\n"
+      "<zip object at 0x000001A9591123C0>\n"
      ]
     }
    ],
@@ -4833,8 +4833,8 @@
      "output_type": "stream",
      "text": [
       "bbb\n",
-      "ccc\n",
-      "aaa\n"
+      "aaa\n",
+      "ccc\n"
      ]
     }
    ],
@@ -5379,12 +5379,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Floating point numbers: 13.14\n"
+      "Floating point numbers: 13.15\n"
      ]
     }
    ],
    "source": [
-    "print('Floating point numbers: %5.2f' %(13.144))"
+    "print('Floating point numbers: %5.2f' %(13.148))"
    ]
   },
   {
@@ -5401,7 +5401,7 @@
     }
    ],
    "source": [
-    "print('Floating point numbers: %1.0f' %(13.144))"
+    "print('Floating point numbers: %1.0f' %(13.148))"
    ]
   },
   {
@@ -5413,12 +5413,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Floating point numbers: 13.14400\n"
+      "Floating point numbers: 13.14800\n"
      ]
     }
    ],
    "source": [
-    "print('Floating point numbers: %1.5f' %(13.144))"
+    "print('Floating point numbers: %1.5f' %(13.148))"
    ]
   },
   {
@@ -5430,13 +5430,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Floating point numbers:      13.14\n"
+      "Floating point numbers:      13.15\n"
      ]
     }
    ],
    "source": [
     "# Note that 5 empty spaces will be added in front of the number, to make it a total of 10 characters\n",
-    "print('Floating point numbers: %10.2f' %(13.144))"
+    "print('Floating point numbers: %10.2f' %(13.148))"
    ]
   },
   {
@@ -5448,12 +5448,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Floating point numbers:                     13.14\n"
+      "Floating point numbers:                     13.15\n"
      ]
     }
    ],
    "source": [
-    "print('Floating point numbers: %25.2f' %(13.144))"
+    "print('Floating point numbers: %25.2f' %(13.148))"
    ]
   },
   {
@@ -5803,7 +5803,7 @@
    "source": [
     "Note that with f-strings, *precision* refers to the total number of digits, not just those following the decimal point. This fits more closely with scientific notation and statistical analysis. \n",
     "\n",
-    "Unfortunately, f-strings do not pad to the right of the decimal point, even if precision allows it. In the following cell, zeros are not added to `23.45` although we set the precision to 6."
+    "Unfortunately, f-strings do not pad to the right of the decimal point, even if precision allows it. In the following cell, zeros are not added to `23.47` although we set the precision to 6."
    ]
   },
   {
@@ -5815,12 +5815,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "My 10 character, two decimal number is:     23.45\n"
+      "My 10 character, two decimal number is:     23.47\n"
      ]
     }
    ],
    "source": [
-    "print(f\"My 10 character, two decimal number is:{23.45:{10}.{6}}\")"
+    "print(f\"My 10 character, two decimal number is:{23.47:{10}.{6}}\")"
    ]
   },
   {
@@ -5839,12 +5839,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "My 10 character, four decimal number is:   23.4500\n"
+      "My 10 character, four decimal number is:   23.4700\n"
      ]
     }
    ],
    "source": [
-    "print(f\"My 10 character, four decimal number is:{23.45:10.4f}\")"
+    "print(f\"My 10 character, four decimal number is:{23.47:10.4f}\")"
    ]
   },
   {
