--- a/docs/Lectures/Theme_1-Python_Programming/Lecture_3-Statements,_Files/Lecture_3-Statements,_Files.ipynb
+++ b/docs/Lectures/Theme_1-Python_Programming/Lecture_3-Statements,_Files/Lecture_3-Statements,_Files.ipynb
@@ -3112,7 +3112,7 @@
    "outputs": [],
    "source": [
     "import pickle\n",
-    "F = open('newdatafile.pkl', 'wb') # 'wb' used for writing to a binary file, indicates that the content of the file is not text\n",
+    "F = open('newdatafile.pkl', 'wb') # 'wb' used for writing to a binary file, the pickle module uses binary format for storing objects\n",
     "# Pickle any object to file\n",
     "pickle.dump(L, F) \n",
     "F.close()"
@@ -3147,25 +3147,15 @@
     "# Load any object from file\n",
     "F = open('newdatafile.pkl', 'rb') # similarly, 'rb' used for reading a binary file\n",
     "list1 = pickle.load(F) \n",
+    "F.close()\n",
     "list1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "F.close()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `pickle` module performs a conversion of Python objects to string representation, referred to as **object serialization**, and a reverse conversion of strings to Python objects, which is called  **object deserialization**."
+    "The `pickle` module performs a conversion of Python objects to byte stream representation, referred to as **object serialization**, and a reverse conversion of byte streams to Python objects, which is called  **object deserialization**. In general terms, object serialization is coverting an object into a sequence of bytes or a string representation format."
    ]
   },
   {
@@ -3179,7 +3169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`JSON` (stands for JavaScript Object Notation) is a newer data interchange format, which allows using stored data across programming languages (unlike `pickle` which works only with Python). On the other hand, `JSON` does not support as broad range of Python object types as `pickle`.\n",
+    "`JSON` (stands for JavaScript Object Notation) is a newer data interchange format, which originated from JavaScript, but it is language-independent and allows using stored data across programming languages (unlike `pickle` which works only with Python). Because of this, `JSON` format is commonly used for data exchange between systems and applications, especially in web development. Also, `JSON` uses text format for object serialization, whereas `pickle` uses binary format. On the other hand, `JSON` does not support as broad range of Python object types as `pickle`.\n",
     "\n",
     "The following example shows translating the above dictionary `D` into `JSON` format to be saved into a file, and recreating the dictionary from the `JSON` format when it is loaded from the file."
    ]
@@ -3219,7 +3209,9 @@
    ],
    "source": [
     "# Deserialize the text file to a dictionary\n",
-    "new_d = json.load(open('json_datafile.text'))\n",
+    "FJ = open('json_datafile.text', 'r')\n",
+    "new_d = json.load(FJ)\n",
+    "FJ.close()\n",
     "new_d"
    ]
   },
