--- a/docs/Lectures/Theme_1-Python_Programming/Lecture_3-Statements,_Files/Lecture_3-Statements,_Files.ipynb
+++ b/docs/Lectures/Theme_1-Python_Programming/Lecture_3-Statements,_Files/Lecture_3-Statements,_Files.ipynb
@@ -3155,7 +3155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `pickle` module performs a conversion of Python objects to byte stream representation, referred to as **object serialization**, and a reverse conversion of byte streams to Python objects, which is called  **object deserialization**. In general terms, object serialization is coverting an object into a sequence of bytes or a string representation format."
+    "The `pickle` module performs a conversion of Python objects to byte stream representation, referred to as **object serialization**, and a reverse conversion of byte streams to Python objects, which is called  **object deserialization**. In general terms, object serialization is converting an object into a sequence of bytes or a string representation format."
    ]
   },
   {
