--- a/docs/Lectures/Theme_1-Python_Programming/Lecture_4-Functions,_Iterators/Lecture_4-Functions,_Iterators.ipynb
+++ b/docs/Lectures/Theme_1-Python_Programming/Lecture_4-Functions,_Iterators/Lecture_4-Functions,_Iterators.ipynb
@@ -2099,7 +2099,7 @@
    "source": [
     "Although there are different namespaces, Python may not be able to access each namespace from every part of the script. For instance, the names defined outside of a function cannot be accessed inside a function. The visibility of variable names to other parts in the code is determined by the scope.\n",
     "\n",
-    "> **Scope** is the portion of code from where a namespace can be accessed directly.. "
+    "> **Scope** is the portion of code from where a namespace can be accessed directly. "
    ]
   },
   {
@@ -4351,7 +4351,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that the order in which the inner functions are defined does not matter, and what matter is the order in which the inner functions are called within the `parent()` function. That is, `second_child` is called first, and afterward `first_child` is called.\n",
+    "Note that the order in which the inner functions are defined does not matter, and what matters is the order in which the inner functions are called within the `parent()` function. That is, `second_child` is called first, and afterward `first_child` is called.\n",
     "\n",
     "As we know, the inner functions are in the  local scope to the outer (enclosing) function `parent()`, and they only exist inside the `parent()` function as local variables. If we try calling `first_child()` we will get an error."
    ]
