--- a/docs/Lectures/Tutorials/Tutorial_2-Terminal_and_Command_Line/Tutorial_2-Terminal_and_Command_Line.ipynb
+++ b/docs/Lectures/Tutorials/Tutorial_2-Terminal_and_Command_Line/Tutorial_2-Terminal_and_Command_Line.ipynb
@@ -109,11 +109,11 @@
     "For example, the current directory `C:\\Users\\[Username]>` will be displayed as in the figure below.\n",
     "\n",
     "\n",
-    "<img src=\"images/cmd5.png\" width=\"400\">\n",
+    "<img src=\"images/cmd5.png\" width=\"500\">\n",
     "\n",
     "Only valid commands will be accepted in the Command Prompt, otherwise a message like this will be displayed.\n",
     "\n",
-    "<img src=\"images/cmd8.png\" width=\"400\">\n",
+    "<img src=\"images/cmd8.png\" width=\"500\">\n",
     "\n",
     "\n",
     "**Help** command: typing `help` in the Command Prompt will display a list of commands and the associated descriptions.\n",
@@ -228,7 +228,7 @@
     "\n",
     "- To access the terminal, click on the Activities on the upper left of the screen, and type keywords like **\"terminal\"**, **\"command\"**, **\"prompt\"**, or **\"shell\"**.\n",
     "\n",
-    "<img src=\"images/terminal1.png\" width=\"500\">\n",
+    "<img src=\"images/terminal1.png\" width=\"600\">\n",
     "\n",
     "- Press **Ctrl+Alt+T**."
    ]
@@ -240,7 +240,7 @@
     "After opening a terminal window,\n",
     "**username@linux-desktop:~$** will be displayed. \n",
     "\n",
-    "<img src=\"images/terminal2.png\" width=\"500\">"
+    "<img src=\"images/terminal2.png\" width=\"600\">"
    ]
   },
   {
@@ -267,7 +267,7 @@
     "\n",
     "In Linux, `ls` is used to list the files in a directory, instead of the command `dir` in Windows.\n",
     "\n",
-    "<img src=\"images/ls.png\" width=\"420\" height=\"80\">\n",
+    "<img src=\"images/ls.png\" width=\"500\">\n",
     "\n",
     "The `mkdir` command in Linux is used to create new directories within the file system, and it is the same as in Windows. \n",
     "\n",
@@ -275,15 +275,15 @@
     "\n",
     "The `rm` command is used to delete a file in the current directory.\n",
     "\n",
-    "<img src=\"images/mkdir.png\" width=\"300\" height=\"200\">\n",
+    "<img src=\"images/mkdir.png\" width=\"500\">\n",
     "\n",
     "The `cp` command allows you to copy files or directories.\n",
     "\n",
-    "<img src=\"images/cp.png\" width=\"300\" height=\"100\">\n",
+    "<img src=\"images/cp.png\" width=\"500\">\n",
     "\n",
     "The `mv` command is used to move a file or directory from one place to another. \n",
     "\n",
-    "<img src=\"images/mv.png\" width=\"300\" height=\"120\">\n",
+    "<img src=\"images/mv.png\" width=\"500\">\n",
     "\n",
     "Pressing the keys `Ctrl+C` is used to interrupt or terminate a running command or process in the terminal. \n",
     "\n",
@@ -297,7 +297,7 @@
     "\n",
     "By hitting `tab` twice you'll get suggestions based on the text written so far.\n",
     "\n",
-    "<img src=\"images/tab.png\" width=\"350\" height=\"110\">\n",
+    "<img src=\"images/tab.png\" width=\"500\">\n",
     "\n",
     "To run a Python file in the Linux terminal, type `python3` followed by the file name."
    ]
