--- a/docs/Lectures/Theme_1-Python_Programming/Lecture_5-OOP,_Modules,_Packages/Lecture_5-OOP,_Modules,_Packages.ipynb
+++ b/docs/Lectures/Theme_1-Python_Programming/Lecture_5-OOP,_Modules,_Packages/Lecture_5-OOP,_Modules,_Packages.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lecture 5 - Object-Oriented Programming"
+    "# Lecture 5 - Object-Oriented Programming, Modules, Packages"
    ]
   },
   {
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "[![View notebook on Github](https://img.shields.io/static/v1.svg?logo=github&label=Repo&message=View%20On%20Github&color=lightgrey)](https://github.com/avakanski/Fall-2024-Applied-Data-Science-with-Python/blob/main/docs/Lectures/Theme_1-Python_Programming/Lecture_5-OOP,Modules,Packages/Lecture_5-OOP,Modules,Packages.ipynb)\n",
-    "[![Open In Collab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/avakanski/Fall-2023-Python-Programming-for-Data-Science/blob/main/docs/Lectures/Theme_1-Python_Programming/Lecture_5-OOP/Lecture_5-OOP.ipynb) "
+    "[![Open In Collab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/https://colab.research.google.com/github/avakanski/Fall-2024-Applied-Data-Science-with-Python/main/docs/Lectures/Theme_1-Python_Programming/Lecture_5-OOP%2CModules%2CPackages/Lecture_5-OOP%2CModules%2CPackages.ipynb\">) "
    ]
   },
   {
